// =============================================================
//  e-Kvarovi Županije - model baze
//  Zalijepiti na https://dbdiagram.io
// =============================================================

Project eKvarovi {
  database_type: 'SQLite'
  Note: '''
    Prijava i obrada kvarova na županijskim lokacijama.

    Tok prijave:
    Zaprimljeno -> Pregledano -> Dodijeljeno -> U radu -> Riješeno -> Zatvoreno

    Tri odluke koje oblikuju model:
    1. Povijest dodjela nosi zasebna tablica WorkAssignments, a ne polje
       TechnicianId na prijavi. Ponovna dodjela zatvara stari nalog i otvara
       novi - prethodni ostaje netaknut.
    2. Intervencije vise uz nalog, ne uz prijavu. Neuspjesna intervencija
       ostaje zabiljezena, a na istom nalogu se otvara nova.
    3. Vrsta kvara, prioritet i rok su nullable jer ih prijavitelj ne zna -
       popunjava ih upravitelj pri pregledu prijave.
  '''
}


// =============================================================
//  SIFARNICI
// =============================================================

Table LocationTypes {
  Id int [pk, increment]
  Name varchar(100) [not null, unique]
  SortOrder int [not null]
  IsActive boolean [not null, default: true]

  Note: 'Upravna zgrada, Skola, Zdravstvena ustanova, Skladiste'
}

Table FaultTypes {
  Id int [pk, increment]
  Name varchar(100) [not null, unique]
  SortOrder int [not null]
  IsActive boolean [not null, default: true]

  Note: 'Elektrika, Voda, Grijanje, Mreza, Gradevinski radovi, Ostalo'
}

Table FaultPriorities {
  Id int [pk, increment]
  Name varchar(100) [not null, unique]
  Level int [not null, note: 'veci broj = hitnije, koristi se za sortiranje']
  RequiresDeadline boolean [not null, note: 'true samo za Kriticno']
  SortOrder int [not null]
  IsActive boolean [not null, default: true]

  Note: '''
    Nizak, Srednji, Visok, Kriticno.
    RequiresDeadline je pravilo zapisano kao podatak - poslužitelj
    po njemu odbija kriticnu prijavu bez roka, bez zakucanog if-a u kodu.
  '''
}

Table FaultStatuses {
  Id int [pk, increment]
  Name varchar(100) [not null, unique]
  IsClosed boolean [not null]
  SortOrder int [not null]
  IsActive boolean [not null, default: true]

  Note: 'Zaprimljeno, Pregledano, Dodijeljeno, U radu, Rijeseno, Zatvoreno'
}

Table InterventionStatuses {
  Id int [pk, increment]
  Name varchar(100) [not null, unique]
  IsFinal boolean [not null, note: 'intervencija je zakljucena']
  IsSuccessful boolean [not null, note: 'samo Zavrsena podize prijavu u Rijeseno']
  SortOrder int [not null]
  IsActive boolean [not null, default: true]

  Note: 'Planirana, U tijeku, Zavrsena, Neuspjesna'
}

Table MaterialUnits {
  Id int [pk, increment]
  Name varchar(100) [not null, unique]
  Abbreviation varchar(10) [not null]
  SortOrder int [not null]
  IsActive boolean [not null, default: true]

  Note: 'Komad, Metar, Litra, Kilogram, Paket'
}

Table AttachmentPurposes {
  Id int [pk, increment]
  Name varchar(100) [not null, unique]
  AllowsDocuments boolean [not null, note: 'true dopusta PDF, inace samo slike']
  SortOrder int [not null]
  IsActive boolean [not null, default: true]

  Note: 'Fotografija prije rada, Fotografija nakon rada, Dokument'
}


// =============================================================
//  OSNOVNI PODACI
// =============================================================

Table Locations {
  Id int [pk, increment]
  Name varchar(150) [not null]
  Address varchar(200) [not null]
  City varchar(100) [not null]
  LocationTypeId int [not null, ref: > LocationTypes.Id]
  Note varchar(500)
  IsActive boolean [not null, default: true]

  Note: 'Na neaktivnu lokaciju ne mogu se prijavljivati novi kvarovi.'
}

Table Employees {
  Id int [pk, increment]
  FirstName varchar(100) [not null]
  LastName varchar(100) [not null]
  Email varchar(200) [not null, unique]
  Phone varchar(50)
  JobTitle varchar(100)
  IsTechnician boolean [not null, note: 'samo izvrsitelju se dodjeljuje nalog']
  LocationId int [ref: > Locations.Id, note: 'maticna lokacija, SetNull']
  IsActive boolean [not null, default: true]

  Note: '''
    Isti model za prijavitelja i izvrsitelja.
    Razliku radi IsTechnician i uloga na pripadajucem racunu.
  '''
}

Table Materials {
  Id int [pk, increment]
  Name varchar(150) [not null, unique]
  Code varchar(50)
  MaterialUnitId int [not null, ref: > MaterialUnits.Id]
  DefaultUnitPrice real [not null]
  IsActive boolean [not null, default: true]

  Note: 'Sifarnik. Isti materijal trosi se na vise intervencija.'
}


// =============================================================
//  GLAVNI TOK
// =============================================================

Table FaultReports {
  Id int [pk, increment]
  Title varchar(150) [not null]
  Description varchar(2000) [not null]
  ReportedAt datetime [not null]

  LocationId int [not null, ref: > Locations.Id]
  ReporterId int [not null, ref: > Employees.Id]

  // popunjava upravitelj pri pregledu
  FaultTypeId int [ref: > FaultTypes.Id]
  FaultPriorityId int [ref: > FaultPriorities.Id]
  Deadline date
  ReviewedAt datetime
  ReviewedById int [ref: > Employees.Id]

  FaultStatusId int [not null, ref: > FaultStatuses.Id]
  ResolvedAt datetime
  ClosedAt datetime
  ClosingNote varchar(1000)

  indexes {
    FaultStatusId
    ReportedAt
    Deadline
  }

  Note: '''
    FaultTypeId, FaultPriorityId i Deadline su nullable jer prijava
    u statusu Zaprimljeno jos nije pregledana. Prijavitelj ih ne
    odreduje - to radi upravitelj.

    ResolvedAt popunjava sustav kad izvrsitelj uspjesno zavrsi
    intervenciju. ClosedAt popunjava upravitelj nakon zavrsne provjere.
  '''
}

Table WorkAssignments {
  Id int [pk, increment]
  FaultReportId int [not null, ref: > FaultReports.Id, note: 'Cascade']
  TechnicianId int [not null, ref: > Employees.Id]
  AssignedById int [ref: > Employees.Id]

  AssignedAt datetime [not null]
  UnassignedAt datetime [note: 'popunjava se kad posao preuzme drugi']
  Note varchar(500) [note: 'uputa izvrsitelju']
  ReassignReason varchar(500)
  IsActive boolean [not null, default: true]

  indexes {
    TechnicianId
    (FaultReportId) [unique, name: 'IX_WorkAssignments_OneActivePerReport', note: 'filtrirani: WHERE IsActive = 1']
  }

  Note: '''
    Radni nalog. OVDJE ZIVI POVIJEST.

    Ponovna dodjela NE brise prethodni zapis nego mu postavlja
    IsActive = false i UnassignedAt. Filtrirani jedinstveni indeks
    jamci da po prijavi postoji najvise JEDAN aktivan nalog -
    pravilo cuva baza, ne samo kod.
  '''
}

Table Interventions {
  Id int [pk, increment]
  WorkAssignmentId int [not null, ref: > WorkAssignments.Id, note: 'Cascade']
  InterventionStatusId int [not null, ref: > InterventionStatuses.Id]

  StartedAt datetime [not null]
  FinishedAt datetime
  DurationMinutes int [note: 'racuna se iz vremena, moze se ispraviti rucno']
  Note varchar(2000) [note: 'obavezna kod zavrsetka']

  indexes {
    StartedAt
  }

  Note: '''
    Jedan izlazak na teren. Vise intervencija po nalogu - neuspjesna
    ostaje zabiljezena, a otvara se nova bez gubitka prethodne.

    Uspjesan zavrsetak (status Zavrsena) automatski podize
    pripadajucu prijavu u status Rijeseno.
  '''
}

Table InterventionMaterials {
  Id int [pk, increment]
  InterventionId int [not null, ref: > Interventions.Id, note: 'Cascade']
  MaterialId int [not null, ref: > Materials.Id, note: 'Restrict']
  Quantity real [not null, note: 'mora biti veca od nule']
  UnitPrice real [not null]

  indexes {
    (InterventionId, MaterialId) [unique]
  }

  Note: '''
    Spojna tablica M:N s kolicinom.

    UnitPrice se prepisuje iz sifarnika pri unosu, ali se pamti
    zasebno - kasnija promjena cjenika ne mijenja stare naloge.
  '''
}

Table Attachments {
  Id int [pk, increment]
  AttachmentPurposeId int [not null, ref: > AttachmentPurposes.Id]

  // privitak pripada ili prijavi ili intervenciji
  FaultReportId int [ref: > FaultReports.Id, note: 'Cascade']
  InterventionId int [ref: > Interventions.Id, note: 'Cascade']

  OriginalFileName varchar(260) [not null, note: 'ime koje je korisnik vidio']
  StoredFileName varchar(100) [not null, note: 'GUID, generira posluzitelj']
  Url varchar(300) [not null]
  ContentType varchar(100) [not null]
  SizeBytes bigint [not null]
  UploadedAt datetime [not null]
  UploadedById int [ref: > Employees.Id]

  Note: '''
    Ime iz zahtjeva se nikad ne koristi za putanju na disku -
    inace bi netko poslao "../../appsettings.json" i pisao izvan mape.

    Brisanje uklanja i zapis i fizicku datoteku.
  '''
}


// =============================================================
//  AUTENTIKACIJA
// =============================================================

Table AppUsers {
  Id int [pk, increment]
  Email varchar(200) [not null, unique]
  PasswordHash text [not null]
  DisplayName varchar(150) [not null]
  EmployeeId int [ref: > Employees.Id, note: 'SetNull']
  IsActive boolean [not null, default: true]

  Note: '''
    Veza na djelatnika je ono sto /mine scenarije cini mogucima.

    Pri prijavi se EmployeeId upisuje u JWT kao claim "employee_id".
    Endpointi MyReports i MyAssignments citaju ga iskljucivo iz tokena,
    nikad iz tijela zahtjeva - inace bi korisnik poslao tudji id
    i vidio tude podatke.

    Racun bez EmployeeId (cisti administrator) nema vlastitih prijava.
  '''
}

Table AppRoles {
  Id int [pk, increment]
  Name varchar(50) [not null, unique]

  Note: 'Admin, Manager, Technician, Reporter'
}

Table AppUserRole {
  AppUserId int [not null, ref: > AppUsers.Id, note: 'Cascade']
  AppRoleId int [not null, ref: > AppRoles.Id, note: 'Cascade']

  indexes {
    (AppUserId, AppRoleId) [pk]
  }

  Note: 'Spojna tablica - jedan racun moze imati vise uloga.'
}
